fix: render error in mermaid

--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -612,7 +612,8 @@ pre.mu-active.mu-fenced-code::after {
 
 /* empty */
 
-.mu-empty {
+.mu-empty,
+.mu-diagram-error {
   color: var(--editorColor50);
   font-size: 14px;
   font-family: monospace;
