--- a/lib/ui/frontButton/index.css
+++ b/lib/ui/frontButton/index.css
@@ -7,22 +7,29 @@
 }
 
 .mu-icon-wrapper {
-  box-sizing: border-box;
   display: flex;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
   width: 20px;
   height: 20px;
+
   border-radius: 3px;
   cursor: grab;
   opacity: .8;
 }
 
 .mu-icon-wrapper:hover {
-  border: var(--buttonBorder);
+  background: var(--button-bg-color-hover);
+  border: var(--button-border);
+  opacity: 1;
 }
 
 .mu-icon-wrapper:hover i.paragraph {
+  display: none;
+}
+
+.mu-icon-wrapper i.drag {
   display: none;
 }
 
@@ -38,13 +45,9 @@
   height: 14px;
   overflow: hidden;
 
-  color: var(--iconColor);
+  color: var(--icon-color);
 
   transition: all .25s ease-in-out;
-}
-
-.mu-icon-wrapper i.drag {
-  display: none;
 }
 
 .mu-icon-wrapper i.icon > i[class^="icon-"] { 
@@ -60,25 +63,20 @@
   filter: drop-shadow(14px 0 currentcolor);
 }
 
-.mu-icon-wrapper:hover {
-  background: var(--buttonBgColorHover);
-  opacity: 1;
-}
-
 .mu-line-ghost {
   position: absolute;
 
   height: 3px;
 
-  background: var(--editorColor30);
+  background: var(--editor-color-30);
 }
 
 .mu-shadow {
   position: absolute;
   z-index: 1;
 
-  background: var(--editorBgColor);
-  box-shadow: var(--floatShadow);
+  background: var(--editor-bg-color);
+  box-shadow: var(--float-shadow);
   transform: translateX(-30px);
   opacity: .8;
 }
