--- a/lib/ui/previewTools/index.css
+++ b/lib/ui/previewTools/index.css
@@ -1,11 +1,12 @@
 .mu-float-wrapper.mu-preview-tools-container {
   overflow: visible;
 
-  background: var(--editorColor04);
+  background: var(--editor-color-04);
 
   border-radius: 7px;
   box-shadow: none;
 }
+
 .mu-preview-tools {
   width: 90px;
   height: 28px;
@@ -36,7 +37,7 @@
 }
 
 .mu-preview-tools li.item:hover {
-  background: var(--floatHoverColor);
+  background: var(--float-hover-color);
 }
 
 .mu-preview-tools li.item:last-of-type {
@@ -51,7 +52,7 @@
   width: 1px;
   height: 18px;
 
-  background: var(--editorColor10);
+  background: var(--editor-color-10);
 
   content: '';
 }
@@ -70,7 +71,7 @@
   height: 100%;
   overflow: hidden;
 
-  color: var(--iconColor);
+  color: var(--icon-color);
 
   transition: all .25s ease-in-out;
 }
@@ -83,5 +84,5 @@
   width: 100%;
   height: 100%;
 
-  filter: drop-shadow(16px 0 currentColor);
+  filter: drop-shadow(16px 0 currentcolor);
 }
