--- a/lib/ui/tooltip/index.css
+++ b/lib/ui/tooltip/index.css
@@ -5,13 +5,13 @@
   box-sizing: border-box;
   padding: 5px 7px;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 12px;
 
-  background: var(--floatBgColor);
-  border: 1px solid var(--floatBorderColor);
+  background: var(--float-bg-color);
+  border: 1px solid var(--float-border-color);
   border-radius: 5px;
-  box-shadow: 0 4px 8px 0 var(--floatBorderColor);
+  box-shadow: 0 4px 8px 0 var(--float-border-color);
   opacity: 0;
 
   transition: opacity .2s ease-in;
@@ -32,7 +32,7 @@
   height: 8px;
 
   background: inherit;
-  border: 1px solid var(--floatBorderColor);
+  border: 1px solid var(--float-border-color);
   border-right: none;
   border-bottom: none;
   transform: rotate(45deg) translateX(-50%);
