--- a/lib/assets/styles/index.css
+++ b/lib/assets/styles/index.css
@@ -1,76 +1,29 @@
 :root {
   /* editor */
-
-  /* Theme color cluster */
-  --themeColor: rgba(33, 181, 111, 1);
-  --themeColor90: rgba(33, 181, 111, .9);
-  --themeColor80: rgba(33, 181, 111, .8);
-  --themeColor70: rgba(33, 181, 111, .7);
-  --themeColor60: rgba(33, 181, 111, .6);
-  --themeColor50: rgba(33, 181, 111, .5);
-  --themeColor40: rgba(33, 181, 111, .4);
-  --themeColor30: rgba(33, 181, 111, .3);
-  --themeColor20: rgba(33, 181, 111, .2);
-  --themeColor10: rgba(33, 181, 111, .1);
-  --highlightThemeColor: var(--themeColor);
-  --highlightColor: rgba(33, 181, 111, .4);
-  --selectionColor: rgba(45, 170, 219, 0.3);
-  --editorColor: rgba(0, 0, 0, .7);
-  --editorColor80: rgba(0, 0, 0, .8);
-  --editorColor60: rgba(0, 0, 0, .6);
-  --editorColor50: rgba(0, 0, 0, .5);
-  --editorColor40: rgba(0, 0, 0, .4);
-  --editorColor30: rgba(0, 0, 0, .3);
-  --editorColor10: rgba(0, 0, 0, .1);
-  --editorColor04: rgba(0, 0, 0, .03);
-  --editorBgColor: rgba(255, 255, 255, 1);
-  --deleteColor: #ff6969;
-  --iconColor: #6B737B;
-  --codeBgColor: #d8d8d869;
-  --codeBlockBgColor: rgba(0, 0, 0, 0.03);
-  --footnoteBgColor: rgba(0, 0, 0, .03);
-  --inputBgColor: rgba(0, 0, 0, .06);
-  --focusColor: var(--themeColor);
-  --buttonFontColor: var(--editorColor);
-  --buttonBgColor: #fff;
-  --buttonBorder: 1px solid #dcdfe6;
-  --buttonShadow: none;
-  --buttonFontColorHover: var(--buttonFontColor);
-  --buttonBgColorHover: linear-gradient(#f9f9f9, #f2f2f2);
-  --buttonBorderHover: var(--buttonBorder);
-  --buttonFontColorActive: var(--buttonFontColor);
-  --buttonBgColorActive: #f0f0f0;
-  --buttonBorderActive: var(--buttonBorder);
-  --buttonFocusBorder: 1px solid var(--themeColor);
-  --buttonPrimaryFontColor: #fff;
-  --buttonPrimaryBgColor: var(--themeColor);
-  --buttonPrimaryBorder: none;
-  --buttonPrimaryShadow: 0 0 8px 0 rgba(0, 0, 0, .1);
-  --buttonPrimaryFontColorHover: var(--buttonPrimaryFontColor);
-  --buttonPrimaryBgColorHover: var(--buttonPrimaryBgColor);
-  --buttonPrimaryBorderHover: var(--buttonPrimaryBorder);
-  --buttonPrimaryFontColorActive: var(--buttonPrimaryFontColor);
-  --buttonPrimaryBgColorActive: var(--buttonPrimaryBgColor);
-  --buttonPrimaryBorderActive: var(--buttonPrimaryBorder);
-  --buttonPrimaryFocusBorder: none;
-  --buttonPrimaryFocusShadow: inset 0 0 0 1px rgba(13, 91, 55, 0.5), 0 0 0 1px var(--themeColor);
-  --tableBorderColor: #e5e5e5;
-  --floatFontColor: rgba(0, 0, 0, .6);
-  --floatBgColor: #fff;
-  --floatHoverColor: rgba(0, 0, 0, .04);
-  --floatBorderColor: rgba(0, 0, 0, .1);
-  --floatShadow: rgba(15, 15, 15, 0.03) 0 0 0 1px, rgba(15, 15, 15, 0.04) 0 3px 6px, rgba(15, 15, 15, 0.05) 0 9px 24px;
-  --maskColor: rgba(232, 232, 232, .8);
-
-  /* Notification colors */
-  --notificationPrimaryColor: #fff;
-  --notificationPrimaryBg: var(--themeColor);
-  --notificationInfoColor: #fff;
-  --notificationInfoBg: #909399;
-  --notificationWarningColor: #fff;
-  --notificationWarningBg: #f80;
-  --notificationErrorColor: #fff;
-  --notificationErrorBg: #ff6969;
+  --theme-color: rgb(33 181 111 / 100%);
+  --highlight-color: rgb(33 181 111 / 40%);
+  --selection-color: rgb(45 170 219 / 30%);
+  --editor-color: rgb(0 0 0 / 70%);
+  --editor-color-80: rgb(0 0 0 / 80%);
+  --editor-color-50: rgb(0 0 0 / 50%);
+  --editor-color-30: rgb(0 0 0 / 30%);
+  --editor-color-10: rgb(0 0 0 / 10%);
+  --editor-color-04: rgb(0 0 0 / 3%);
+  --editor-bg-color: rgb(255 255 255 / 100%);
+  --delete-color: #ff6969;
+  --icon-color: #6B737B;
+  --code-block-bg-color: rgb(0 0 0 / 3%);
+  --table-border-color: #e5e5e5;
+  --input-bg-color: rgb(0 0 0 / 6%);
+  --button-font-color: var(--editor-color);
+  --button-bg-color: #fff;
+  --button-border: 1px solid #dcdfe6;
+  --button-bg-color-hover: linear-gradient(#f9f9f9, #f2f2f2);
+  --button-border-hover: var(--button-border);
+  --float-bg-color: #fff;
+  --float-hover-color: rgb(0 0 0 / 4%);
+  --float-border-color: rgb(0 0 0 / 10%);
+  --float-shadow: rgb(15 15 15 / 3%) 0 0 0 1px, rgb(15 15 15 / 4%) 0 3px 6px, rgb(15 15 15 / 5%) 0 9px 24px;
 }
 
 /*
@@ -171,23 +124,25 @@
 
 @keyframes loading {
   0% {
-    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
     transform: rotate(0deg);
   }
+
   100% {
-    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
     transform: rotate(360deg);
   }
 }
 
 @keyframes highlight {
-  from {
+  0% {
     transform: scale(1);
   }
+
   50% {
     transform: scale(1.2);
   } /* ignored */
-  to {
+  100% {
     transform: scale(1);
   }
 }
@@ -204,10 +159,10 @@ html, body {
   height: 1.3em;
   padding: 0 2px;
 
-  color: var(--editorColor80);
+  color: var(--editor-color-80);
   line-height: 1.3em;
 
-  background: var(--highlightColor);
+  background: var(--highlight-color);
   border-radius: 1px;
 
   animation-name: highlight;
@@ -217,9 +172,9 @@ html, body {
 *:not(.mu-hide)::selection, .mu-selection {
   padding: 0 .2em;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
 
-  background: var(--selectionColor);
+  background: var(--selection-color);
   border-radius: 2px;
 }
 
@@ -232,31 +187,18 @@ html, body {
 .mu-button {
   padding: 7px 14px;
 
-  color: var(--buttonFontColor);
+  color: var(--button-font-color);
   text-decoration: none;
 
-  background: var(--buttonBgColor);
-  border: var(--buttonBorder);
+  background: var(--button-bg-color);
+  border: var(--button-border);
   border-radius: 5px;
-  box-shadow: var(--buttonShadow);
   cursor: pointer;
 }
 
 .mu-button:hover {
-  color: var(--buttonFontColorHover);
+  color: var(--button-font-color);
 
-  background: var(--buttonBgColorHover);
-  border: var(--buttonBorderHover);
-}
-
-.mu-button:active {
-  color: var(--buttonFontColorActive);
-
-  background: var(--buttonBgColorActive);
-  border: var(--buttonBorderActive);
-}
-
-.mu-button:focus {
-  border: var(--buttonFocusBorder);
-  outline: none;
+  background: var(--button-bg-color-hover);
+  border: var(--button-border-hover);
 }
