--- a/lib/assets/styles/inlineSyntax.css
+++ b/lib/assets/styles/inlineSyntax.css
@@ -1,5 +1,5 @@
 .mu-gray {
-  color: var(--editorColor30);
+  color: var(--editor-color-30);
   text-decoration: none;
 }
 
@@ -14,13 +14,13 @@
 
 /* link and auto-link and reference link */
 a.mu-inline-rule {
-  color: var(--editorColor80);
+  color: var(--editor-color-80);
 
   pointer-events: none;
 }
 
 .mu-link-in-bracket {
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
 }
 
 /* inline code */
@@ -28,11 +28,11 @@ code.mu-inline-rule {
   margin: 0;
   padding: 0.2em 0.4em;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: .8em;
   font-family: "DejaVu Sans Mono", "Source Code Pro", "Droid Sans Mono", Consolas, monospace;
 
-  background-color: var(--codeBlockBgColor);
+  background-color: var(--code-block-bg-color);
   border-radius: 3px;
 }
 
@@ -40,7 +40,7 @@ code.mu-inline-rule {
 .mu-emoji-marked-text {
   position: relative;
 
-  color: var(--themeColor);
+  color: var(--theme-color);
 }
 
 .mu-emoji-marked-text[data-emoji] {
@@ -71,7 +71,7 @@ code.mu-inline-rule {
 }
 
 .mu-warn.mu-emoji-marked-text {
-  color: var(--deleteColor);
+  color: var(--delete-color);
   text-decoration: none;
 }
 
@@ -93,7 +93,7 @@ code.mu-inline-rule {
   width: 1em;
   height: 100%;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
 
   content: attr(data-character);
 }
@@ -117,12 +117,13 @@ code.mu-inline-rule {
 
   vertical-align: bottom;
 }
+
 .mu-math {
   position: relative;
 
   display: inline-block;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-family: monospace;
   vertical-align: bottom;
 }
@@ -137,11 +138,11 @@ code.mu-inline-rule {
   display: inline-block;
   padding: .3em .5em;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
 
-  background: var(--floatBgColor);
+  background: var(--float-bg-color);
   border-radius: 4px;
-  box-shadow: var(--floatShadow);
+  box-shadow: var(--float-shadow);
 
   user-select: none;
 }
@@ -156,7 +157,7 @@ code.mu-inline-rule {
 
 div .mu-math-error,
 .mu-math > .mu-math-render.mu-math-error {
-  color: var(--deleteColor);
+  color: var(--delete-color);
   font-size: 14px;
   font-family: monospace;
   font-style: italic;
@@ -177,6 +178,7 @@ div .mu-math-error,
   width: auto;
   height: auto;
 }
+
 .mu-hide.mu-ruby > .mu-ruby-text,
 .mu-hide.mu-math > .mu-math-text {
   display: inline-block;
@@ -192,7 +194,7 @@ div .mu-math-error,
 
   padding: 0;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
 
   background: transparent;
   border: none;
@@ -205,12 +207,12 @@ div .mu-math-error,
 .mu-math:not(.mu-hide) > .mu-math-render {
   z-index: 100;
 
-  box-shadow: var(--floatShadow);
+  box-shadow: var(--float-shadow);
 }
 
 .mu-ruby > .mu-ruby-render::before,
 .mu-math > .mu-math-render::before {
-  border-bottom-color: var(--floatBgColor);
+  border-bottom-color: var(--float-bg-color);
 }
 
 .mu-gray.mu-ruby > .mu-ruby-render::before
@@ -235,7 +237,7 @@ div .mu-math-error,
 
 blockquote .mu-hide.mu-ruby > .mu-ruby-render,
 blockquote .mu-hide.mu-math > .mu-math-render {
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
 }
 
 /* header space */
@@ -255,7 +257,7 @@ blockquote .mu-hide.mu-math > .mu-math-render {
 
   display: inline-block;
 
-  background: var(--codeBlockBgColor);
+  background: var(--code-block-bg-color);
   border-radius: 2px;
 }
 
@@ -263,7 +265,7 @@ blockquote .mu-hide.mu-math > .mu-math-render {
 .mu-inline-image.center,
 .mu-inline-image.right {
   display: block;
-  margin: 30px auto 40px auto;
+  margin: 30px auto 40px;
 }
 
 .mu-inline-image.left {
@@ -282,8 +284,14 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   position: relative;
 
   display: inline-block;
-  overflow: visible;
   max-width: 100%;
+  overflow: visible;
+}
+
+.mu-image-marked-text ~ img {
+  display: inline-block;
+  max-width: 100%;
+  margin: 0 auto;
 }
 
 .mu-inline-image .mu-image-container img {
@@ -318,7 +326,7 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   height: 20px;
   overflow: hidden;
 
-  color: var(--iconColor);
+  color: var(--icon-color);
 }
 
 .mu-inline-image i.icon > i[class^="icon-"] {
@@ -329,7 +337,7 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   width: 100%;
   height: 100%;
 
-  filter: drop-shadow(20px 0 currentColor);
+  filter: drop-shadow(20px 0 currentcolor);
 }
 
 .mu-inline-image.mu-image-fail,
@@ -359,7 +367,7 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   height: 20px;
   overflow: hidden;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 14px;
   line-height: 20px;
   white-space: nowrap;
@@ -400,12 +408,6 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   opacity: .5;
 }
 
-.mu-image-marked-text ~ img {
-  display: inline-block;
-  max-width: 100%;
-  margin: 0 auto;
-}
-
 .mu-inline-image.mu-image-uploading .mu-image-container img {
   opacity: .3;
 }
@@ -438,17 +440,17 @@ blockquote .mu-hide.mu-math > .mu-math-render {
   font-size: 10px;
   text-indent: -9999px;
 
-  border-top: 2px solid var(--editorColor10);
-  border-right: 2px solid var(--editorColor10);
-  border-bottom: 2px solid var(--editorColor10);
-  border-left: 2px solid var(--iconColor);
+  border-top: 2px solid var(--editor-color-10);
+  border-right: 2px solid var(--editor-color-10);
+  border-bottom: 2px solid var(--editor-color-10);
+  border-left: 2px solid var(--icon-color);
   transform: translateZ(0);
 
   animation: loading 1.1s infinite linear;
 }
 
 .mu-image-marked-text {
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
   font-size: 1em;
   text-decoration: none;
   word-break: break-all;
@@ -462,20 +464,20 @@ blockquote .mu-hide.mu-math > .mu-math-render {
 
   vertical-align: sub;
 
-  background: url(../icons/image_light.png);
+  background: url("../icons/image_light.png");
   background-size: cover;
 
   content: '';
 }
 
 .mu-image-marked-text.mu-image-fail::before {
-  background-image: url(../icons/image_light_fail.png);
+  background-image: url("../icons/image_light_fail.png");
   background-size: cover;
 }
 
 /* text after ``` in paragraph content */
 .mu-language {
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
   font-weight: 600;
   font-family: monospace;
   text-decoration: none;
@@ -483,7 +485,7 @@ blockquote .mu-hide.mu-math > .mu-math-render {
 
 /* reference definition */
 .mu-reference-marker {
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
   font-size: .9em;
 }
 
