--- a/lib/ui/footnoteTool/index.css
+++ b/lib/ui/footnoteTool/index.css
@@ -10,7 +10,7 @@
   height: 35px;
   padding: 0 10px;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 12px;
 }
 
@@ -46,7 +46,7 @@
   height: 100%;
   overflow: hidden;
 
-  color: var(--iconColor);
+  color: var(--icon-color);
 
   transition: all .25s ease-in-out;
 }
@@ -59,5 +59,5 @@
   width: 100%;
   height: 100%;
 
-  filter: drop-shadow(14px 0 currentColor);
+  filter: drop-shadow(14px 0 currentcolor);
 }
