--- a/lib/ui/imageSelector/index.css
+++ b/lib/ui/imageSelector/index.css
@@ -1,6 +1,7 @@
 .mu-image-selector-wrapper {
   border-radius: 3px;
 }
+
 .mu-image-selector {
   width: 500px;
   min-height: 190px;
@@ -15,7 +16,7 @@
   padding: 0;
   padding-left: 40px;
 
-  border-bottom: 1px solid var(--editorColor10);
+  border-bottom: 1px solid var(--editor-color-10);
 }
 
 .mu-image-selector ul.header li {
@@ -26,7 +27,7 @@
   justify-content: space-around;
   height: 100%;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 14px;
 }
 
@@ -43,7 +44,7 @@
 }
 
 .mu-image-selector ul.header li span:hover {
-  background: var(--editorColor04);
+  background: var(--editor-color-04);
 }
 
 .mu-image-selector ul.header li.active::before {
@@ -55,7 +56,7 @@
   width: 100%;
   height: 3px;
 
-  background: var(--themeColor);
+  background: var(--theme-color);
 
   content: '';
 }
@@ -65,7 +66,7 @@
   box-sizing: border-box;
   width: 100%;
   height: 30px;
-  margin: 20px 0 15px 0;
+  margin: 20px 0 15px;
   padding: 0 25px;
 }
 
@@ -74,10 +75,10 @@
   margin-right: 10px;
   padding: 0 15px;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 14px;
 
-  background: var(--inputBgColor);
+  background: var(--input-bg-color);
   border: none;
   border-radius: 15px;
   outline: none;
@@ -120,7 +121,7 @@
 .mu-image-selector span.description {
   display: block;
 
-  color: var(--editorColor30);
+  color: var(--editor-color-30);
   text-align: center;
 
   user-select: none;
@@ -129,7 +130,7 @@
 .mu-image-selector .des a {
   margin-left: 5px;
 
-  color: var(--editorColor70);
+  color: var(--editor-color-80);
 }
 
 .mu-image-selector span.description a {
@@ -161,10 +162,10 @@
   margin: 10px 11px;
   padding: 0 15px;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 14px;
 
-  background: var(--inputBgColor);
+  background: var(--input-bg-color);
   border: none;
   border-radius: 15px;
   outline: none;
@@ -177,7 +178,7 @@
 .mu-image-selector .no-data {
   margin-top: 30px;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 14px;
   text-align: center;
 
@@ -187,7 +188,7 @@
 .mu-image-selector .more {
   margin-bottom: 20px;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 12px;
   text-align: center;
 
@@ -229,13 +230,13 @@
 .mu-image-selector .des {
   margin-top: 5px;
 
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
   font-size: 12px;
   line-height: 20px;
 }
 
 .mu-image-selector .des a:hover {
-  color: var(--themeColor);
+  color: var(--theme-color);
 }
 
 .mu-plugin-loading,
@@ -254,10 +255,10 @@
   font-size: 10px;
   text-indent: -9999px;
 
-  border-top: 2px solid var(--editorColor10);
-  border-right: 2px solid var(--editorColor10);
-  border-bottom: 2px solid var(--editorColor10);
-  border-left: 2px solid var(--iconColor);
+  border-top: 2px solid var(--editor-color-10);
+  border-right: 2px solid var(--editor-color-10);
+  border-bottom: 2px solid var(--editor-color-10);
+  border-left: 2px solid var(--icon-color);
   transform: translateZ(0);
 
   animation: loading 1.1s infinite linear;
