--- a/lib/ui/linkTools/index.css
+++ b/lib/ui/linkTools/index.css
@@ -35,7 +35,7 @@
 }
 
 .mu-link-tools li.item:hover {
-  background: var(--floatHoverColor);
+  background: var(--float-hover-color);
 }
 
 .mu-link-tools li.item:last-of-type::before {
@@ -46,7 +46,7 @@
   width: 1px;
   height: 18px;
 
-  background: var(--editorColor10);
+  background: var(--editor-color-10);
 
   content: '';
 }
@@ -64,7 +64,7 @@
   height: 100%;
   overflow: hidden;
 
-  color: var(--iconColor);
+  color: var(--icon-color);
 
   transition: all .25s ease-in-out;
 }
@@ -77,5 +77,5 @@
   width: 100%;
   height: 100%;
 
-  filter: drop-shadow(18px 0 currentColor);
+  filter: drop-shadow(18px 0 currentcolor);
 }
