--- a/lib/ui/quickInsert/index.css
+++ b/lib/ui/quickInsert/index.css
@@ -1,7 +1,7 @@
 .mu-quick-insert {
   width: 230px;
   max-height: 260px;
-  padding: 0 0 20px 0;
+  padding: 0 0 20px;
   overflow-y: auto;
 }
 
@@ -11,16 +11,16 @@
   z-index: 1001;
 
   display: flex;
-  padding: 10px 14px 10px 14px;
+  padding: 10px 14px;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
+  font-weight: 500;
   font-size: 13px;
   line-height: 120%;
   letter-spacing: 1px;
-  font-weight: 500;
   text-transform: uppercase;
 
-  background: var(--floatBgColor);
+  background: var(--float-bg-color);
 }
 
 .mu-quick-insert .item {
@@ -36,7 +36,7 @@
 
 .mu-quick-insert .active,
 .mu-quick-insert div.item:hover {
- background-color: var(--floatHoverColor);
+ background-color: var(--float-hover-color);
 }
 
 .mu-quick-insert:hover .active {
@@ -47,7 +47,7 @@
   margin-top: 20px;
   padding: 0 20px;
 
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
   font-size: 14px;
   text-align: center;
 }
@@ -56,11 +56,11 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
+  box-sizing: border-box;
   width: 20px;
   height: 20px;
-  margin-left: 14px;
   margin-right: 5px;
-  box-sizing: border-box;
+  margin-left: 14px;
 }
 
 .mu-quick-insert .icon-container > i.icon {
@@ -71,7 +71,7 @@
   height: 16px;
   overflow: hidden;
 
-  color: var(--iconColor);
+  color: var(--icon-color);
 
   opacity: .8;
 
@@ -86,7 +86,7 @@
   width: 100%;
   height: 100%;
 
-  filter: drop-shadow(20px 0 currentColor);
+  filter: drop-shadow(20px 0 currentcolor);
 }
 
 .mu-quick-insert .description {
@@ -94,20 +94,20 @@
 }
 
 .mu-quick-insert .short-cut {
+  display: flex;
+  flex-direction: row-reverse;
   flex-shrink: 1;
+  align-items: center;
   width: 70px;
   margin-right: 20px;
 
-  color: var(--editorColor50);
+  color: var(--editor-color-50);
   font-size: 12px;
   letter-spacing: 1px;
-  display: flex;
-  align-items: center;
-  flex-direction: row-reverse;
 }
 
 .mu-quick-insert .big-title {
-  color: var(--editorColor);
+  color: var(--editor-color);
   font-size: 13px;
 }
 
