--- a/lib/ui/tablePicker/index.css
+++ b/lib/ui/tablePicker/index.css
@@ -11,9 +11,11 @@
   flex-direction: column;
   margin-bottom: 5px;
 }
+
 .mu-table-picker-row {
   display: flex;
 }
+
 .mu-table-picker-cell {
   box-sizing: border-box;
   width: 16px;
@@ -21,58 +23,67 @@
   margin-right: 1px;
   margin-bottom: 1px;
 
-  border: 1px solid var(--editorColor10);
+  border: 1px solid var(--editor-color-10);
   cursor: pointer;
 }
+
 .mu-table-picker-header span {
-  background: var(--editorColor10);
+  background: var(--editor-color-10);
 }
+
 .mu-table-picker-cell.current {
-  background: var(--editorColor30);
+  background: var(--editor-color-30);
 }
+
 .mu-table-picker-header .current {
-  background: var(--editorColor50);
+  background: var(--editor-color-50);
 }
+
 .mu-table-picker-cell.selected {
-  background: var(--selectionColor);
+  background: var(--selection-color);
 }
+
 .mu-table-picker-header .selected {
-  background: var(--selectionColor);
+  background: var(--selection-color);
 }
+
 .mu-table-picker-cell:last-of-type {
   margin-right: 0;
 }
+
 .mu-table-picker .footer {
   display: flex;
   justify-content: space-around;
-  padding: 10px 0 0 0;
+  padding: 10px 0 0;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   text-align: center;
 
-  border-top: 1px solid var(--floatBorderColor);
+  border-top: 1px solid var(--float-border-color);
 }
+
 .mu-table-picker .footer input {
   box-sizing: border-box;
   width: 30px;
   height: 20px;
   padding: 0;
 
-  color: var(--editorColor);
+  color: var(--editor-color);
   text-align: center;
 
-  background: var(--floatBorderColor);
+  background: var(--float-border-color);
   border: none;
   border-radius: 3px;
   outline: none;
 }
+
 .mu-table-picker .footer button {
   height: 20px;
 
   color: #fff;
   line-height: 20px;
 
-  background: var(--themeColor);
+  background: var(--theme-color);
   border: none;
   border-radius: 3px;
   outline: none;
