--- a/lib/ui/transformer/index.css
+++ b/lib/ui/transformer/index.css
@@ -6,10 +6,10 @@
   width: 14px;
   height: 14px;
 
-  background: var(--themeColor);
-  border: 2px solid var(--editorBgColor);
+  background: var(--theme-color);
+  border: 2px solid var(--editor-bg-color);
   border-radius: 50%;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 2px 2px 0 rgb(0 0 0 / 15%);
 }
 
 .mu-transformer .top-left,
