fix: error when click mu-table dom

--- a/lib/assets/styles/blockSyntax.css
+++ b/lib/assets/styles/blockSyntax.css
@@ -273,6 +273,7 @@ li.mu-task-list-item {
   position: relative;
 
   list-style-type: none;
+  padding-left: .3em;
 }
 
 li.mu-task-list-item > input[type="checkbox"] {
