--- a/lib/assets/styles/inlineSyntax.css
+++ b/lib/assets/styles/inlineSyntax.css
@@ -13,8 +13,10 @@
 }
 
 /* link and auto-link and reference link */
-a.mu-inline-rule {
+a.mu-inline-rule,
+span.mu-inline-rule.mu-link {
   color: var(--editor-color-80);
+  text-decoration: underline;
 
   pointer-events: none;
 }
