--- a/lib/ui/quickInsert/index.css
+++ b/lib/ui/quickInsert/index.css
@@ -69,7 +69,7 @@
   display: inline-block;
   width: 16px;
   height: 16px;
-  overflow: hidden;
+  overflow: auto;
 
   color: var(--icon-color);
 
