--- a/lib/ui/imageEditTool/index.css
+++ b/lib/ui/imageEditTool/index.css
@@ -3,264 +3,78 @@
 }
 
 .mu-image-selector {
-  width: 500px;
-  min-height: 190px;
-  max-height: 400px;
+  width: 400px;
+  height: 32px;
 }
 
-.mu-image-selector ul.header {
-  display: flex;
-  flex-shrink: 0;
-  height: 40px;
-  margin: 0;
-  padding: 0;
-  padding-left: 40px;
-
-  border-bottom: 1px solid var(--editor-color-10);
-}
-
-.mu-image-selector ul.header li {
-  position: relative;
-
+.mu-image-selector .image-edit-tool {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  height: 100%;
-
-  color: var(--editor-color);
-  font-size: 14px;
+  justify-content: center;
 }
 
-.mu-image-selector ul.header li span {
-  display: inline-block;
-  width: 100%;
-  height: 30px;
-  padding: 0 8px;
-
-  line-height: 30px;
-
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.mu-image-selector ul.header li span:hover {
-  background: var(--editor-color-04);
-}
-
-.mu-image-selector ul.header li.active::before {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-
-  display: block;
-  width: 100%;
-  height: 3px;
-
-  background: var(--theme-color);
-
-  content: '';
-}
-
-.mu-image-selector .input-container {
+.mu-image-selector .image-edit-tool .more {
+  width: 40px;
+  height: 32px;
+  border-right: 1px solid var(--float-border-color);
   display: flex;
-  box-sizing: border-box;
-  width: 100%;
-  height: 30px;
-  margin: 20px 0 15px;
-  padding: 0 25px;
-}
-
-.mu-image-selector .input-container input {
-  height: 30px;
-  margin-right: 10px;
-  padding: 0 15px;
-
-  color: var(--editor-color);
-  font-size: 14px;
-
-  background: var(--input-bg-color);
-  border: none;
-  border-radius: 15px;
-  outline: none;
-}
-
-.mu-image-selector .input-container input:last-of-type {
-  margin-right: 0;
-}
-
-.mu-image-selector .input-container input.src {
-  flex: 1;
-}
-
-.mu-image-selector .input-container input.title,
-.mu-image-selector .input-container input.alt {
-  flex: 0;
-  max-width: 80px;
-}
-
-.mu-image-selector button.role-button {
-  display: block;
-  box-sizing: border-box;
-  width: 240px;
-  margin: 0 auto;
-  margin-bottom: 16px;
-
-  font-size: 14px;
-  text-align: center;
-
-  border-radius: 8px;
-  cursor: pointer;
-
-  user-select: none;
-}
-
-.mu-image-selector button.role-button.select {
-  margin-top: 35px;
-}
-
-.mu-image-selector span.description {
-  display: block;
-
-  color: var(--editor-color-30);
-  text-align: center;
-
-  user-select: none;
-}
-
-.mu-image-selector .des a {
-  margin-left: 5px;
-
-  color: var(--editor-color-80);
-}
-
-.mu-image-selector span.description a {
-  color: #4ca4f5;
-
-  cursor: pointer;
-}
-
-.mu-image-selector > div {
-  display: flex;
-  flex-direction: column;
-  max-height: 400px;
-}
-
-.mu-image-selector .image-select-body {
-  flex: 1;
-  max-height: 359px;
-  overflow: auto;
-}
-
-.mu-image-selector .image-select-body::-webkit-scrollbar:vertical {
-  width: 0;
-}
-
-.mu-image-selector .image-select-body .search {
-  box-sizing: border-box;
-  width: calc(100% - 22px);
-  height: 30px;
-  margin: 10px 11px;
-  padding: 0 15px;
-
-  color: var(--editor-color);
-  font-size: 14px;
-
-  background: var(--input-bg-color);
-  border: none;
-  border-radius: 15px;
-  outline: none;
-}
-
-.mu-image-selector .photos-wrapper {
-  padding: 11px;
-}
-
-.mu-image-selector .no-data {
-  margin-top: 30px;
-
-  color: var(--editor-color);
-  font-size: 14px;
-  text-align: center;
-
-  user-select: none;
-}
-
-.mu-image-selector .more {
-  margin-bottom: 20px;
-
-  color: var(--editor-color);
-  font-size: 12px;
-  text-align: center;
-
-  user-select: none;
-}
-
-.mu-image-selector .photo {
-  display: inline-block;
-  width: 112px;
-  height: 80px;
-  margin-right: 10px;
-  margin-bottom: 12px;
-  overflow: hidden;
-}
-
-.mu-image-selector .photo:nth-of-type(4n) {
-  margin-right: 0;
-}
-
-.mu-image-selector .image-wrapper {
+  align-items: center;
+  justify-content: center;
   position: relative;
-
-  width: 110px;
-  height: 60px;
-  overflow: hidden;
-
-  border-radius: 2px;
   cursor: pointer;
 }
 
-.mu-image-selector .image-wrapper img {
+.mu-image-selector .image-edit-tool .more-inner {
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  display: block;
+  background-color: var(--editor-color-50);
+}
+
+.mu-image-selector .image-edit-tool .more:before,
+.mu-image-selector .image-edit-tool .more:after {
+  content: '';
   position: absolute;
-  top: 0;
-  left: 0;
-
-  width: 100%;
+  width: 4px;
+  height: 4px;
+  border-radius: 50%;
+  display: block;
+  background-color: var(--editor-color-50);
+  top: 14px
 }
 
-.mu-image-selector .des {
-  margin-top: 5px;
+.mu-image-selector .image-edit-tool .more:before {
+  left: 10px;
+}
 
+.mu-image-selector .image-edit-tool .more:after {
+  right: 10px;
+}
+
+.mu-image-selector .image-edit-tool .src {
+  height: 32px;
+  flex: 1;
+  border: none;
+  border-radius: 0;
+  border-right: 1px solid var(--float-border-color);
+  margin: 0;
+  padding: 0 5px;
   color: var(--editor-color-50);
-  font-size: 12px;
-  line-height: 20px;
 }
 
-.mu-image-selector .des a:hover {
+.mu-image-selector .image-edit-tool .confirm {
+  width: 40px;
+  height: 32px;
+  line-height: 32px;
+  text-align: center;
+  cursor: pointer;
+  font-weight: 600;
+}
+
+.mu-image-selector .image-edit-tool .confirm:hover {
   color: var(--theme-color);
 }
-
-.mu-plugin-loading,
-.mu-plugin-loading::after {
-  width: 22px;
-  height: 22px;
-
-  border-radius: 50%;
-}
-
-.mu-plugin-loading {
-  position: relative;
-
-  margin: 60px auto;
-
-  font-size: 10px;
-  text-indent: -9999px;
-
-  border-top: 2px solid var(--editor-color-10);
-  border-right: 2px solid var(--editor-color-10);
-  border-bottom: 2px solid var(--editor-color-10);
-  border-left: 2px solid var(--icon-color);
-  transform: translateZ(0);
-
-  animation: loading 1.1s infinite linear;
-}
-
