--- a/lib/ui/imageResizeBar/index.css
+++ b/lib/ui/imageResizeBar/index.css
@@ -1,23 +1,21 @@
-.mu-transformer .circle {
+.mu-transformer .bar {
   position: absolute;
 
   display: inline-block;
   box-sizing: border-box;
-  width: 14px;
-  height: 14px;
+  width: 10px;
+  height: 50px;
 
   background: var(--theme-color);
   border: 2px solid var(--editor-bg-color);
-  border-radius: 50%;
+  border-radius: 5px;
   box-shadow: 0 2px 2px 0 rgb(0 0 0 / 15%);
 }
 
-.mu-transformer .top-left,
-.mu-transformer .bottom-right {
-  cursor: nwse-resize
+.mu-transformer .left {
+  cursor: ew-resize;
 }
 
-.mu-transformer .top-right,
-.mu-transformer .bottom-left {
-  cursor: nesw-resize
+.mu-transformer .right {
+  cursor: ew-resize
 }
