--- a/lib/assets/styles/exportStyle.css
+++ b/lib/assets/styles/exportStyle.css
@@ -1,70 +1,66 @@
-.markdown-body a.footnote-ref {
-  text-decoration: none;
+.markdown-body {
+  font-family: -apple-system, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+  box-sizing: border-box;
+  min-width: 200px;
+  max-width: 980px;
+  margin: 0 auto;
+  padding: 45px;
 }
 
-.footnotes {
-  font-size: .85em;
+@media not print {
+  .markdown-body {
+    padding: 45px;
+  }
 
-  opacity: .8;
+  @media (max-width: 767px) {
+    .markdown-body {
+      padding: 15px;
+    }
+  }
 }
 
-.footnotes li[role="doc-endnote"] {
-  position: relative;
+.markdown-body pre {
+  white-space: pre-wrap;
 }
 
-.footnotes .footnote-back {
-  position: absolute;
-  top: .2em;
-  right: 1em;
-
-  font-family: initial;
-  text-decoration: none;
+.markdown-body table {
+  display: table;
 }
 
-.inline-math.invalid,
-.multiple-math.invalid {
-  color: rgb(255 105 105);
+.markdown-body img[data-align="center"] {
+  display: block;
+  margin: 0 auto;
 }
 
-.toc-container {
-  width: 100%;
+.markdown-body img[data-align="right"] {
+  display: block;
+  margin: 0 0 0 auto;
 }
 
-.toc-container .toc-title {
-  margin-bottom: 0;
-
-  font-weight: 700;
-  font-size: 1.2em;
+.markdown-body li:has(input[type=checkbox]) {
+  list-style-type: none;
 }
 
-.toc-container li,
-.toc-container ul,
-.toc-container ul li {
-  list-style: none !important;
+.markdown-body li input[type=checkbox] {
+  margin: 0 0 0 -1.3em;
 }
 
-.toc-container > ul {
-  padding-left: 0;
+.markdown-body ol ol,
+.markdown-body ul ol {
+  list-style-type: decimal;
 }
 
-.toc-container ul li span {
-  display : flex;
+.markdown-body ol ol ol,
+.markdown-body ol ul ol,
+.markdown-body ul ol ol,
+.markdown-body ul ul ol {
+  list-style-type: decimal;
 }
 
-.toc-container ul li span a {
-  color: inherit;
-  text-decoration: none;
-}
-
-.toc-container ul li span a:hover {
-  color: inherit;
-  text-decoration: none;
-}
-
-.toc-container ul li span span.dots {
-  flex: 1;
-  height: 0.65em;
-  margin: 0 10px;
-
-  border-bottom: 2px dotted black;
+.markdown-body div.plantuml,
+.markdown-body div.mermaid,
+.markdown-body div.sequence {
+  display: block;
+  text-align: center;
+  padding: 20px 0;
 }
