--- a/packages/core/src/ui/tableRowColumMenu/index.css
+++ b/packages/core/src/ui/tableRowColumMenu/index.css
@@ -21,6 +21,7 @@
     color: var(--editor-color);
     font-size: 13px;
     line-height: 25px;
+    white-space: nowrap;
 
     cursor: pointer;
 }
